@@ -56,11 +56,3 @@ Spacebar: Fires the currently drawn weapon, if pressed/held down.
 Enter: Interacts with various game elements, such as doors, dialogs, and lots of other menu items found in general, if pressed.
 Shift plus enter: Uses an inventory item when it's currently focused, if pressed/held down.
 Escape: Exits the current game session, and returns back to the main menu, if pressed.
-
-Translating ToyMania
-To create a new translation, first go to the languages/normal/ folder. Copy the English.lng file and rename it to your new language name (for example, Spanish.lng).
-Open your .lng file in a text editor. Translate the text after each equal sign while keeping the keys intact. Once you have translated the necessary lines, save the file. Your new language will automatically appear in the prefferences menu of the game.
-If you want to create variants for a particular language, create a folder inside languages/variants/ with your base language name, and place the variant .lng files inside it. Feel free to modify the tone, wording, or style however you want.
-Try to preserve the & symbol for hotkeys if possible. If you are unsure about a word, you can leave the English word as a fallback.
-If a language file is invalid, missing, or empty, the game will automatically fall back to English. Your selected language is automatically saved when you choose it in the prefferences menu.
-If you want to disable the translation system entirely, you can do so in the prefferences menu by selecting the "None" option. This will make the game use its built-in English text for all labels and messages, just like it would if no language files were provided.
