@@ -19,8 +19,8 @@ final_list+=list[i]+"\r\n";
 }
 final_list+="total files: "+list.length()+"\r\n";
 file slist;
-slist.open("data/res/soundslist.txt", "a");
+slist.open("data/res/soundslist.txt", "w");
 slist.write(final_list);
 slist.close();
-alert("Complete! ", "The sound list has now been written to data/res/soundslist.txt.");
+alert("Complete! ", "The sound list has been written to data/res/soundslist.txt.");
 }
